# multi-agent-lab

./: .gitignore  LICENSE  Makefile  README.md  first cc prompt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: immo_whitelist.example.yaml  regelwerk.example.yaml  user_context.example.yaml
data/: plz-de-ch.csv
data/schemas/: council.schema.sql  feedback.schema.sql  folio.schema.sql
docs/: cross-db-write-ausnahmen.md  quickstart.md  worker-output-schema.md
docs/fieldnotes/: bauteil-10-c1-comparis-homegate-diagnose.md  bauteil-11-d3-user-rankings-diagnose.md  bauteil-8-a5-auto-uebernahme-diagnose.md  bauteil-8-a6-council-cleanup-2026-06-09.md  fieldnote-bauteil-10-cross-portal-vollendung-2026-06-10.md  (+19 more)
hermes-feedback/: notes-2026-05-08.md
schemas/: classification-schema-v2.1.md  classification-schema-v2.md
scripts/: add_midrun_snapshot.py  auto_uebernahme.py  domain_actionability.py  feedback_telegram.py  fetch_demo_photos.py  folio_corrections.py  folio_log_writer.py  imap_actions.py  imap_cleanup.py  immo_heuristic.py  init_demo_dbs.sh  init_feedback_db.py  marketing_learner.py  model_swap.py  paths.py  plz_lookup.py  production_telemetry.py  production_worker.py  seed_council_demo.py  seed_pipeline_demo.py  sender_heuristic.py  sender_learner.py  test_sender_prefix_match.py  test_subject_keyword_boundary.py  test_system_domain_match.py  validator_batch.py
state/: .gitkeep
tests/: conftest.py  test_auto_uebernahme.py  test_feedback_telegram.py  test_immo_heuristic.py  test_production_worker_smoke.py  test_regelwerk_loader.py
(+37 files in other folders)
